--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular-google-auth2": "^1.0.8",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "nedb": "^1.8.0"
